--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LibraryManagementSystem</title>
+  <title>LibrarymanagementsystemAngular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/bbb85ac997.js" crossorigin="anonymous"></script>
 </body>
 </html>
